--- a/submissions/sprint3/technical documents/source code/player_UI_styling.css
+++ b/submissions/sprint3/technical documents/source code/player_UI_styling.css
@@ -2,6 +2,7 @@
    height: 100%;
    width: 100%;
    position: relative;
+   transition: 0.5s;
 }
 
 #map {
@@ -13,7 +14,7 @@
 #clue {
     height: auto;
     width: 45%;
-    padding: 2px;
+    padding: 5px;
     text-align: center;
     position: absolute;
     top: 60px;
@@ -57,7 +58,7 @@
 #score {
     height: auto;
     width: 45%;
-    padding: 2px;
+    padding: 5px;
     position: absolute;
     top: 10px;
     border-radius: 0px 5px 5px 0px;
@@ -68,8 +69,7 @@
     font-family: 'Roboto';
     border-bottom-style: solid;
     border-right-style: solid;
-    border-bottom-color: royalblue;
-    border-right-color: royalblue;
+    border-color: royalblue;
     border-right-width: 2px;
     border-bottom-width: 4px;
     box-shadow: 0px 1px 20px black;
