--- a/submissions/sprint3/technical documents/source code/gamekeeper_UI_styling.css
+++ b/submissions/sprint3/technical documents/source code/gamekeeper_UI_styling.css
@@ -27,10 +27,9 @@
 }
 
 #mobjctvlist {
-    height: 30%;
-    width: 250px;
-    left: 0px;
-    right: 0px;
+    height: 75%;
+    background-color: white;
+    overflow: auto;
 }
 
 html, body {
